<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:content=".main.widget.MainActivity">
   <group android:checkableBehavior="single">
       <item android:id="@+id/navigation_item_news"
           android:title="@string/navigation_news"
           android:checked="true"
           android:icon="@mipmap/ic_launcher"/>

       <item android:id="@+id/navigation_item_images"
           android:title="@string/navigation_images"
           android:icon="@mipmap/ic_launcher"/>

       <item android:id="@+id/navigation_item_weather"
           android:title="@string/navigation_weather"
           android:icon="@mipmap/ic_launcher"/>

       <item android:id="@+id/navigation_item_about"
           android:title="@string/navigation_about"
           android:icon="@mipmap/ic_launcher"/>
   </group>
</menu>