<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/fragment_about_padding">

    <TextView
        android:textSize="@dimen/fragment_about_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"/>
    <TextView
        android:layout_marginTop="@dimen/author_margin_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textSize="@dimen/fragment_about_text_size"
        android:text="@string/app_github_url"/>
    <TextView
        android:layout_marginTop="@dimen/author_margin_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textSize="@dimen/fragment_about_text_size"
        android:text="@string/author"
        />

    <TextView
        android:layout_marginTop="@dimen/author_margin_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:textSize="@dimen/fragment_about_text_size"
        android:text="@string/email"
        />
    <TextView
        android:layout_marginTop="@dimen/author_margin_Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:textSize="@dimen/fragment_about_text_size"
        android:text="@string/blog"/>

</LinearLayout>
