<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/weather_data_padding">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/weacher_weather"
        android:layout_marginBottom="@dimen/padding_fragment_weather"
        android:text="@string/Tuesday"/>
    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/biz_plugin_weather_qing"/>

    <TextView
        android:id="@+id/weatherTemp"
        style="@style/weacher_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_weather"
        android:text="@string/weather_tem"
        />
    <TextView
        android:id="@+id/wind"
        style="@style/weacher_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_weather"
        android:text="@string/weather_wind"
        />
    <TextView
        android:id="@+id/weather"
        style="@style/weacher_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_fragment_weather"
        android:text="@string/weather_zhenyuzhuanyin"/>

</LinearLayout>
