<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@mipmap/biz_news_local_weather_bg_big">

    <LinearLayout
        android:id="@+id/weather_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_fragment_weather"
        android:visibility="gone"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/padding_fragment_weather">

            <TextView
                android:id="@+id/city"
                style="@style/weacher_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_layout_city"/>
            <TextView
                android:id="@+id/today"
                style="@style/weacher_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_left"
                android:text="@string/weather_layout_today" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="@dimen/padding_fragment_weather">
            <ImageView
                android:id="@+id/weatherImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/biz_plugin_weather_qing"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/item_news_margin_left">

                <TextView
                    android:id="@+id/weatherTemp"
                    style="@style/weacher_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/weather_data_padding"
                    android:text="@string/weather_tem"/>

                <TextView
                    android:id="@+id/wind"
                    style="@style/weacher_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/weather_data_padding"
                    android:text="@string/weather_wind"/>

                <TextView
                    android:id="@+id/weather"
                    style="@style/weacher_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/weather_zhenyuzhuanyin" />
            </LinearLayout>
        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/weather_content"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"/>
        </HorizontalScrollView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"/>

</FrameLayout>
